--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body, #root {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background-color: #6366f1;
+}
